--- a/hello.html
+++ b/hello.html
@@ -6,13 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-
+    <h1>git의 세상에 오신 것을 환영합니다!</h1>
+<nav>
     <ul>
         <li><a href="#home">Home</a></li>
         <li><a href="company.html">Company</a></li>
         <li><a href="#contact">Products</a></li>
         <li><a href="#about">About</a></li>
     </ul>
-    <h1>git의 세상에 오신 것을 환영합니다!</h1>
+</nav>
+    <div style="width : 100px; height : 100px; border-radius : 50px; background-color: blueviolet;">circle</div>
 </body>
 </html>
