높이 길이 삭제

--- a/hello.html
+++ b/hello.html
@@ -15,6 +15,6 @@
         <li><a href="#about">About</a></li>
     </ul>
 </nav>
-    <div style="width : 100px; height : 100px; border-radius : 50px; background-color: blueviolet;">circle</div>
+    <div style="background-color: rgb(93, 112, 175);">circle</div>
 </body>
 </html>
