--- a/hello.html
+++ b/hello.html
@@ -15,6 +15,7 @@
         <li><a href="#about">About</a></li>
     </ul>
 </nav>
+    <p>사각형</p>
     <div style="width : 100px; height : 100px; border-radius : 50px; background-color: blueviolet;">circle</div>
 </body>
 </html>
